--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ nav .menu{
   background-size: fill;
   background-position: center;
   position: relative;
+  background-color: #fff;
 }
 
 .img::before{
@@ -93,12 +94,12 @@ nav .menu{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
 }
 
 .center{
   position: absolute;
-  top: 52%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -203,7 +204,7 @@ nav .menu{
 .right{
   width: 80%;
   height: auto;
-  background-color: gray;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -370,5 +371,5 @@ h1{
 }
 
 h5:hover{
-  background-color: aqua;
+  background-color: #3EABB1;
 }
