--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ h2{
   align-items: center;
   justify-content: center;
   min-width: 90%;
+  margin-top: 20px;
 }
 
 .white{
@@ -338,6 +339,18 @@ h2{
   flex-wrap: wrap;
   flex-direction: column;
   color: #fff;
+  margin-top: 30px;
+}
+
+.width-dup{
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: #fff;
+
 }
 
 .centre{
@@ -372,4 +385,11 @@ h1{
 
 h5:hover{
   background-color: #3EABB1;
+}
+
+.commOne1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
